# training-pyspark-local

./: README.md  pyproject.toml
data/raw/: customers.csv  transactions.csv
scripts/: 00_smoke_test.py  01_basics_df.py  02_cleaning.py  03_aggregations.py  04_joins.py
scripts/01_foundations/: 01_smoke_test.py  02_basics_df.py  03_cleaning.py  04_aggregations.py  05_joins.py
scripts/02_exercises/: 01_excercises.py  01_select_filter_excercises.py  02_clean_quarantine_excercises.py  02_excercises_advanced.py  03_joins_kpis_excercises.py  04_quarantine_joins_reinforcement_excercises.py
scripts/03_engineering_patterns/: 01_schema_enforcement.py  02_json_parsing.py  03_arrays_explode.py  04_partitioned_writes.py  05_broadcast_cache_explain_rdd.py  06_exercises_engineering_patterns.py
scripts/04_performance_debugging/: 01_explain_and_shuffles.py  02_broadcast_aqe_skew_salting.py  03_cache_persist_checkpoint.py  04_partition_pruning_small_files.py  05_debugging_playbook.py  06_exercises_performance_debugging.py
scripts/05_incremental_delta_quality/: 01_delta_smoke_test.py  02_incremental_watermarks.py  03_quality_gates_quarantine_reasons.py  04_delta_merge_upsert.py  05_incremental_gold_kpis.py  06_exercises_incremental_delta_quality.py
scripts/06_spark_sql_advanced/: 01_temp_views_sql_basics.py  02_ctes.py  03_windows_dedupe.py  04_cohorts.py  05_sql_perf_hints.py  06_exercises_sql_views.py
src/training_pyspark_local/: spark_utils.py
src/training_pyspark_local.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_pipeline_logic.py
